<?xml version="1.0"?>
<package format="2">
  <name>trackers_msgs</name>
  <version>1.0.0</version>
  <description>trackers_msgs</description>
  <maintainer email="lguanrui@nyu.edu">Guanrui Li</maintainer>

  <license>BSD</license>

  <author>Guanrui Li</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
